tools/clang/iterator_checker/tests/implicit-cast-iterator.txt
implicit-cast-iterator.cpp:10:4: error: [iterator-checker] Potentially invalid iterator used.
  *it;
   ^
1 error generated.
